[gd_scene load_steps=5 format=2]

[ext_resource path="res://other/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://sprites/icons/nobadge.png" type="Texture" id=2]
[ext_resource path="res://objects/title/SubMenus/BadgePanel.gd" type="Script" id=3]
[ext_resource path="res://sprites/player/lockedcosmetic.png" type="Texture" id=4]

[node name="Badge" type="Panel"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -7.0
margin_right = 7.0
margin_bottom = 7.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockedIcon" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
